tests/snapshots/render__preview_pr_list.snap
---
source: tests/render.rs
assertion_line: 13
expression: terminal.backend()
---
"┌ Sources ─────────────────────────┐┌  @octocat  ──────────────────────┐┌ repo-zulu-2 #3460 ───────────────────────────┐"
"│▶  @octocat                      ││           ±                  ││chore: remove unused dependencies             │"
"│                                  ││▶     0  · ·                45m   ││@octocat                                      │"
"│                                  ││      chore: remove unused depen…││ Overview  Activity  Commits  Checks  Files Ch│"
"│                                  ││      0  · ·                 1d   ││┌ Overview ──────────────────────────────────┐│"
"│                                  ││      feat: implement search fun…│││Summary                                     ││"
"│                                  ││      1  · ·                 2w   │││                                            ││"
"│                                  ││      bugfix: handle null pointe…│││Loading…                                    ││"
"│                                  ││      0  · ·                6mo   │││                                            ││"
"│                                  ││      refactor: extract service …│││Changes                                     ││"
"│                                  ││      0  · ·                 2y   │││                                            ││"
"│                                  ││      docs: add contributing gui…│││Loading…                                    ││"
"│                                  ││      2  · ·                 3h   │││                                            ││"
"│                                  ││      test: fix flaky unit tests │││Checks                                      ││"
"│                                  ││      0  · ·                 1d   │││                                            ││"
"│                                  ││      feat: add logging middlewa…│││Loading…                                    ││"
"│                                  ││      0  · ·                 2w   │││                                            ││"
"│                                  ││      fix: correct timezone hand…│││                                            ││"
"│                                  ││      2  · ·                 2y   │││                                            ││"
"│                                  ││      chore: update CI configura…│││                                            ││"
"│                                  ││      4  · ·                 3h   │││                                            ││"
"│                                  ││      refactor: clean up legacy …│││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  │││                                            ││"
"│                                  ││                                  ││└────────────────────────────────────────────┘│"
"└──────────────────────────────────┘└ r·repos  p·prs (10)  i·issues ───┘└──────────────────────────────────────────────┘"
" o open  y copy URL  C clone  / filter  ? help                                                                          "
