tests/snapshots/render__preview_repo_list.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌ Sources ─────────────────────────┐┌  @owner  pushed ─────────────────┐┌ Pull Requests  newest ───────────────────────┐"
"│▶  @owner                        ││                                  ││                    ±                    │"
"│                                  ││                                  ││Select a repo                                 │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"└──────────────────────────────────┘└ r·repos  p·prs  i·issues ────────┘└ f·page  p·prs  i·issues ─────────────────────┘"
" o open  y copy URL  / filter  ? help                                                                                   "
