tests/snapshots/render__preview_repo_list_direct_source.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌  octo-org  pushed ─────────────────────────────────┐┌ octo-org/repo-alpha  newest ───────────────────────────────────┐"
"│                                                    ││                                      ±                    │"
"│▶  repo-alpha                                      ││No open pull requests                                           │"
"│   octo-org-labs                                   ││                                                                │"
"│   octo-org                                        ││                                                                │"
"│   octo-org-image                                  ││                                                                │"
"│   octo-org-website                                ││                                                                │"
"│   repo-foxtrot                                    ││                                                                │"
"│   repo-yankee                                     ││                                                                │"
"│   repo-hotel                                      ││                                                                │"
"│   repo-india                                      ││                                                                │"
"│   repo-juliett                                    ││                                                                │"
"│   repo-kilo                                       ││                                                                │"
"│   repo-lima                                       ││                                                                │"
"│   repo-mike                                       ││                                                                │"
"│   repo-november                                   ││                                                                │"
"│   repo-oscar                                      ││                                                                │"
"│   octo-org-textarea                               ││                                                                │"
"│   repo-quebec                                     ││                                                                │"
"│   repo-romeo                                      ││                                                                │"
"│   repo-sierra                                     ││                                                                │"
"│   octo-org-macros                                ││                                                                │"
"│   repo-uniform                                   ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"│                                                    ││                                                                │"
"└ r·repos  p·prs  i·issues ──────────────────────────┘└ f·page  p·prs  i·issues ───────────────────────────────────────┘"
" o open  y copy URL  C clone  / filter  ? help                                                                          "
