tests/snapshots/render__status_message_error.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌ Sources ─────────────────────────┐┌  ────────────────────────────────┐┌ Pull Requests  newest ───────────────────────┐"
"│Run: gh auth login                ││                                  ││                    ±                    │"
"│                                  ││                                  ││Select a repo                                 │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"└──────────────────────────────────┘└ r·repos  p·prs  i·issues ────────┘└ f·page  p·prs  i·issues ─────────────────────┘"
" Something went wrong                                                                                                   "
